# vadt

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
pretrained_models/accent-id/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt
